--- a/DevHelloAspNet/TemplateWebApp/Main.Master
+++ b/DevHelloAspNet/TemplateWebApp/Main.Master
@@ -50,6 +50,15 @@
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
+            
+            <asp:Menu ID="MnuMain" runat="server" Orientation="Horizontal">
+                <Items>
+                    <asp:MenuItem Text="홈" Value="Home" NavigateUrl="~/"></asp:MenuItem>
+                    <asp:MenuItem Text="정보" Value="About" NavigateUrl="~/About.aspx"></asp:MenuItem>
+                    <asp:MenuItem Text="연락처" Value="Contact" NavigateUrl="~/Contact.aspx"></asp:MenuItem>
+                </Items>
+            </asp:Menu>
+
             <hr />
         </div>
         
