--- a/MvcSolutions/MyPortpolio/Views/Shared/_LandingLayout.cshtml
+++ b/MvcSolutions/MyPortpolio/Views/Shared/_LandingLayout.cshtml
@@ -2,86 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, shrink-to-fit=no' />
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="~/assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="~/assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>
-        @ViewData["Title"] - MyPortpolio
-    </title>
 
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-    <!-- CSS Files -->
-    <link href="~/assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="~/assets/demo/demo.css" rel="stylesheet" />
+    @Html.Partial("HeadPage.cshtml")
+
 </head>
 
 <body class="landing-page sidebar-collapse">
-    <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
-        <div class="container">
-            <div class="navbar-translate">
-                <a class="navbar-brand" href="~/Home/Index">
-                    JYJ's Portpolio
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Profile">
-                            <i class="material-icons">assignment_ind</i> Profile
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">
-                            <i class="material-icons">assignment</i> Portpolio
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">
-                            <i class="material-icons">phone</i> Contact
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">
-                            <i class="material-icons">dashboard_customize</i> Board
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">
-                            <i class="material-icons">lock_open</i> 로그인
-                        </a>
-                    </li>
-                    <!-- partial name 태그로 cshtml 삽입 가능! -->
-                    @*<li class="nav-item">
-                        <partial name="_LoginPartial" />
-                    </li>*@
-                    @*<li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank" data-original-title="Follow us on Twitter" rel="nofollow">
-                <i class="fa fa-twitter"></i>
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="Like us on Facebook" rel="nofollow">
-                <i class="fa fa-facebook-square"></i>
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank" data-original-title="Follow us on Instagram" rel="nofollow">
-                <i class="fa fa-instagram"></i>*@
-                </ul>
-            </div>
-        </div>
-    </nav>
+    @Html.Partial("NavPage.cshtml")
     <!-- CSS 경로에서 출발하기 때문에 뒤로 나가서 찾아야 됨! -->
     <div class="page-header header-filter" data-parallax="true" style="background-image : url('../assets/img/profile_city.jpg');">
         <div class="container">
@@ -261,54 +188,8 @@
             </div>
         </div>
     </div>
-    <footer class="footer footer-default">
-        <div class="container">
-            <nav class="float-left">
-                <ul>
-                    <li>
-                        <a href="https://www.creative-tim.com/">
-                            Creative Tim
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.creative-tim.com/presentation">
-                            About Us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.creative-tim.com/blog">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.creative-tim.com/license">
-                            Licenses
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="copyright float-right">
-                &copy;
-                <script>
-                    document.write(new Date().getFullYear())
-                </script>, made with <i class="material-icons">favorite</i> by
-                <a href="https://www.creative-tim.com/" target="_blank">Creative Tim</a> for a better web.
-            </div>
-        </div>
-    </footer>
-    <!--   Core JS Files   -->
-    <script src="~/assets/js/core/jquery.min.js" type="text/javascript"></script>
-    <script src="~/assets/js/core/popper.min.js" type="text/javascript"></script>
-    <script src="~/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-    <script src="~/assets/js/plugins/moment.min.js"></script>
-    <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-    <script src="~/assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
-    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-    <script src="~/assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-    <!--  Google Maps Plugin    -->
-    <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-    <script src="~/assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    @Html.Partial("FooterPage.cshtml")
+    @await RenderSectionAsync("Scripts", required: false);
 </body>
 
 </html>
