--- a/MvcSolutions/MyPortpolio/Views/Home/Login.cshtml
+++ b/MvcSolutions/MyPortpolio/Views/Home/Login.cshtml
@@ -2,79 +2,68 @@
 @{
     ViewData["Title"] = "Login";
     // 요청한 곳에 따라서 레이아웃 바꿔넣기
-@*
-    if (ViewData["Reffer"].ToString().Contains("Login"))
-    {
-    }
-    else
-    {
-        if (ViewData["Reffer"].ToString().Contains("Index"))
+    @*
+        if (ViewData["Reffer"].ToString().Contains("Login"))
         {
-            Layout = "~/Views/Shared/_LandingLayout.cshtml";
-        }
-        else if (ViewData["Reffer"].ToString().Contains("Profile"))
-        {
-            Layout = "~/Views/Shared/_ProfileLayout.cshtml";
         }
         else
         {
-            Layout = "~/Views/Shared/_LoginLayout.cshtml";
-        }*@
-    // 어느 자식 홈페이지건 상관없이 로그인 박스(메트로 스타일 팝업)가 뜨는 기능 구현 
+            if (ViewData["Reffer"].ToString().Contains("Index"))
+            {
+                Layout = "~/Views/Shared/_LandingLayout.cshtml";
+            }
+            else if (ViewData["Reffer"].ToString().Contains("Profile"))
+            {
+                Layout = "~/Views/Shared/_ProfileLayout.cshtml";
+            }
+            else
+            {
+                Layout = "~/Views/Shared/_LoginLayout.cshtml";
+            }*@
+    // 어느 자식 홈페이지건 상관없이 로그인 박스(메트로 스타일 팝업)가 뜨는 기능 구현
     /*
     ASP.NET MVC 팝업 윈도우
     https://demos.devexpress.com/MVCxDockAndPopupsDemos/PopupControl/Templates
     */
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
-    }
-}
-<div class="col-lg-4 col-md-6 ml-auto mr-auto">
-    <div class="card card-login">
-        <form class="form" method="" action="">
-            <div class="card-header card-header-primary text-center">
-                <h4 class="card-title">Login</h4>
-                <div class="social-line">
-                    @*<a href="#pablo" class="btn btn-just-icon btn-link">
-                            <i class="fa fa-facebook-square"></i>
-                        </a>
-                        <a href="#pablo" class="btn btn-just-icon btn-link">
-                            <i class="fa fa-twitter"></i>
-                        </a>
-                        <a href="#pablo" class="btn btn-just-icon btn-link">
-                            <i class="fa fa-google-plus"></i>*@
-                    </a>
-                </div>
+}@*
+<h1>Login</h1>
+
+<h4>Account</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Login">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <p class="description text-center">&nbsp;</p>
-            <div class="card-body">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">
-                            <i class="material-icons">face</i>
-                        </span>
-                    </div>
-                    <input type="text" class="form-control" placeholder="First Name...">
-                </div>
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">
-             <i class="material-icons">mail</i>
-                        </span>
-                    </div>
-                    <input type="email" class="form-control" placeholder="Email...">
-                </div>
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">
-                            <i class="material-icons">lock_outline</i>
-                        </span>
-                    </div>
-                    <input type="password" class="form-control" placeholder="Password...">
-                </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="footer text-center">
-                <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">Get Started</a>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Grade" class="control-label"></label>
+                <input asp-for="Grade" class="form-control" />
+                <span asp-validation-for="Grade" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
+*@
